Added reed solomon ec

--- a/Copy_of_Version_1_QR_Decoding_Guide.ipynb
+++ b/Copy_of_Version_1_QR_Decoding_Guide.ipynb
@@ -20,20 +20,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "fxUgLK_uYEoH",
         "ExecuteTime": {
           "end_time": "2024-05-05T03:47:34.159710800Z",
           "start_time": "2024-05-05T03:47:34.080090800Z"
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f68f0cc0-7609-4ad4-a983-f2295e35c99b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting reedsolo\n",
+            "  Downloading reedsolo-1.7.0-py3-none-any.whl (32 kB)\n",
+            "Installing collected packages: reedsolo\n",
+            "Successfully installed reedsolo-1.7.0\n"
+          ]
+        }
+      ],
       "source": [
         "import cv2\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import math"
+        "import math\n",
+        "!pip install --upgrade reedsolo\n",
+        "import reedsolo as rs"
       ]
     },
     {
